hard-gists/9060558/run.log
=== Docker Run Log for 9060558 ===
Started at: Mi 29. Okt 18:16:56 CET 2025

[2025-10-29 18:16:56] START: Running container for 9060558
[2025-10-29 18:16:56] SUCCESS: Container 613d50ebfb8b3d78b46e7d1fe9369c94bc234260b89215fa24849b658ac72427 started for 9060558
=== Container logs for 9060558 ===
  File "/snippet.py", line 33
    print "In order to use notifications, install the command line program with:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9060558 ===
[2025-10-29 18:16:58] INFO: Container 613d50ebfb8b3d78b46e7d1fe9369c94bc234260b89215fa24849b658ac72427 has stopped
